# eeg_brain_state_prediction

./: .gitignore  .nfs0000002402349fbb000066e2  .nfs00000024037c3dae00003888  ALL_checker.csv  ALL_rest.csv  Interactive-1.ipynb  KeyHandler.py  README.md  TheBlinkRemoval.ipynb  combine_data.py  corr_checker.csv  corr_movies.csv  corr_rest.csv  data_checker.csv  def xcorr_with_ttest(subject_list: list,.py  dev_lab.ipynb  dev_lab_Riemann.ipynb  dev_lab_feature_selection.ipynb  envelope_and_TF_pipeline.py  envelope_and_TF_pipeline_cst.py  feature_extraction_cst.py  feature_select_checker.csv  file_mover.py  fine_tune_random_forest.py  improved_train.py  inter-subject-correlation.py  inter-subject-correlation_riemann.py  legacy_code.py  main.py  multimodal_output.txt  natview_xcorr-t_ftn.py  nested-like_checker.csv  nested-like_rest_ft.csv  nested_CV_checker_12ft.csv  nested_CV_checker_1_ft.csv  nested_CV_checker_24ft.csv  nested_CV_checker_3ft.csv  nested_CV_sub-averaged_3ft.csv  new_s01.py  nohup.out  (+21 more)
labs/: TheBlinkRemoval.ipynb  dev_lab.ipynb  dev_lab_Riemann.ipynb  dev_lab_feature_selection.ipynb  lab_cleaning.ipynb  lab_dri_explorer.ipynb  merge_dataframes.py  move_files.ipynb  plotting_lab.ipynb  plotting_screening_nb_features.ipynb  test_bids_explorer.py
legacy/: collect_multidmodal_legacy.py  lab_extract_yeo.py  run_prediction_model_data-eyetracking_ALL-IN-ONE_per_brainstate.py  s00_helper_functions_data_bva_edf3.py  s00_helper_functions_data_bva_edf5.py  s01_prediction_model_setup_data_eyetracking_incl_movies.py
src/: .env  alternate_isc.py  chain_process.sh  (+33 more)
(+59 files in other folders)
